# mbr-nostd

./: Cargo.toml
src/: error.rs  lib.rs  partitions.rs
